k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deploy
  namespace: postapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: post-pod
  template:
    metadata:
      labels:
        app: post-pod
    spec:
      containers:
        - name: post-container
          image: $DOCKER_HUB_USERNAME/$DOCKER_HUB_REPOSITORY:IMAGE_TAG
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: postapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
      labels:
        app: mysql-pod
    spec:
      containers:
        - name: mysql-container
          image: $DOCKER_HUB_USERNAME/$DOCKER_HUB_REPOSITORY:IMAGE_TAG
          ports:
            - containerPort: 3306
