k8s/postapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deploy
  namespace: postapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-pod
  template:
    metadata:
      labels:
        app: post-pod
    spec:      
      containers:
        - name: post-container
          image: javaenjoy0714/postapp:a638c1fde3b2036474b4d326774173a069a05495
          ports:
            - containerPort: 8080
          
---


apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: postapp
spec:
  selector:
    app: post-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
