k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: postapp
spec:
spec:
  selector:
    app: post-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---


apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: postapp
spec:
spec:
  selector:
    app: mysql-pod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
